--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
 body {
   font-family: 'Poppins', sans-serif;
   background-color: #7545A2;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 body h1 {
@@ -20,18 +23,13 @@ body h2 {
 
 body form {
   background: rgba(27, 27, 50, 0.8);
-  margin: 0 20%;
-  padding: 3%;
+  padding: 5px;
   border-radius: 5px;
+  max-width: 750px;
+  margin: auto;
 }
 
-body p {
-  font-size: 1.3em;
-  color: white;
-  margin: 3% 3%;
-}
-
-body .date {
+body form .form-date {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -39,14 +37,30 @@ body .date {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 1% 3%;
+}
+
+body form .form-date .date {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 5px 10px;
   font-size: 1.3em;
   color: white;
 }
 
-body .select {
-  margin: 0 3%;
-  width: 23%;
+body form p {
+  font-size: 1em;
+  color: white;
+  margin: 5px 5px;
+}
+
+body form .select {
+  margin: auto 10px;
+  width: 150px;
   height: 30px;
   font-size: 1.4em;
   font-family: 'Bebas Neue', cursive;
@@ -58,27 +72,13 @@ body input {
   border-radius: 5px;
 }
 
-body .form-date {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
 body .radio-checkbox {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0 3%;
+  margin: auto 5px;
   color: white;
-  font-size: 1.3em;
-}
-
-body .any {
-  text-align: center;
+  font-size: 1em;
 }
 
 body .textarea {
@@ -109,11 +109,5 @@ body .input-button {
 body .input-button:hover {
   background-color: green;
   color: white;
-}
-
-@media (max-width: 600px) {
-  body form {
-    margin: 0 auto;
-  }
 }
 /*# sourceMappingURL=style.css.map */
